--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,4 @@ on:
 
 jobs:
   use-template:
-    uses: jerobas/.github/workflows/update-readme.yml@main
+    uses: jerobas/.github/.github/workflows/update-readme.yml@main
